adjust also RPN reference tokens, tdf#91842 and probably others

Similar to beb5879f8fea231a037acf010812df2dffbe302d it is not sufficient
to adjust only the parsed tokens, generated RPN tokens need to be
adjusted as well.

Quite likely also other Adjust...() functions have to handle this, need
to investigate.

Change-Id: I5de4e2238703b3ce134f7d46a87bd7a4fb940cff
(cherry picked from commit 47f002cbbf9593ab0097e178732e51b365b42732)